...
                    <view key="view" contentMode="scaleToFill" id="HPY-Gx-ZvW">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cr3-i7-xMp">
                                <rect key="frame" x="190" y="433" width="34" height="30"/>
                                <state key="normal" title="Back"/>
                                <connections>
                                    <action selector="goBack:" destination="bwX-ac-Etn" eventType="touchUpInside" id="XaT-fS-QW0"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
